--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>12 Coins Weighing Puzzle</title>
   <link rel="icon" type="image/svg+xml" href="icon.svg">
   <link data-trunk rel="copy-file" href="icon.svg" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link data-trunk rel="css" href="tailwind.css" crossorigin="anonymous" />
 </head>
 
